[package]
name = "a2o4-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
enum-iterator = "2.1.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.5", features = ["blocking", "cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
ssh2 = "0.9.4"
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
